Removing overflow setting on body tag from embed page, in order to prevent part of the video from dissapearing

--- a/app/assets/stylesheets/embed.scss
+++ b/app/assets/stylesheets/embed.scss
@@ -5,7 +5,6 @@ body {
   padding: 0px;
   width: 100%;
   height: 100%;
-  overflow: hidden;
   position: absolute;
 }
 
